Update twitter to X on firefox /new product images (Fixes #13987)

--- a/media/css/firefox/new/desktop/download.scss
+++ b/media/css/firefox/new/desktop/download.scss
@@ -672,7 +672,6 @@ button.mzp-c-cta-link {
 }
 
 .noodle-browser {
-    @include at2x('/media/img/firefox/new/desktop/hero-mr1.png', 514px, 371px);
     background-color: $color-light-gray-10;
     border-radius: 4px;
     box-shadow: $box-shadow-md;
